--- a/views/home.twig
+++ b/views/home.twig
@@ -23,10 +23,11 @@
 			</div>
 			<div class="col-lg-8 col-md-8 col-sm-12 col-xl-8 col-xxl-8">
 				<div class="card overflow-hidden">
+					<div class="card-header">
+						<h3 class="card-title" style="font-weight: bold;">GESTIONES</h3>
+					</div>
 					<div class="card-body">
-						<div class="d-flex">
-							<div class="mt-2">
-								<table id="data-table" class="table table-bordered table-sm mb-0">
+						<table id="data-table" class="table table-bordered table-sm mb-0">
 									<thead class="table-primary">
 									<tr>
 										<th>USUARIO</th>
@@ -70,70 +71,86 @@
 									</tr>
 									</tbody>
 								</table>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 col-xxl-9">
+	<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 		<div class="card">
 			<div class="card-header">
-				<h3 class="card-title">Sales Analytics</h3>
+				<h3 class="card-title" style="font-weight: bold;">CARGA DE INFORMACIÓN</h3>
 			</div>
 			<div class="card-body">
-				<div class="d-flex mx-auto text-center justify-content-center mb-4">
-					<div class="d-flex text-center justify-content-center me-3"><span class="dot-label bg-primary my-auto"></span>Total Sales</div>
-					<div class="d-flex text-center justify-content-center"><span class="dot-label bg-secondary my-auto"></span>Total Orders</div>
-				</div>
-				<div class="chartjs-wrapper-demo"> <canvas id="transactions" class="chart-dropshadow"></canvas>
-				</div>
+				<table id="data-table" class="table table-bordered table-sm mb-0">
+					<thead class="table-success">
+					<tr>
+						<th>TIPO</th>
+						<th>REGISTROS</th>
+						<th>ERRORES</th>
+						<th>OBSERVACIONES</th>
+						<th>FECHA</th>
+						<th>USUARIO</th>
+					</tr>
+					</thead>
+					<tbody>
+					{% for uc in ultimas_cargas %}
+					<tr>
+						<td style="text-transform: uppercase;">{{ uc.tipo }}</td>
+						<td style="text-align: center;">{{ uc.total_registros }}</td>
+						<td style="text-align: center;">{{ uc.total_errores }}</td>
+						<td style="text-align: center;">{{ uc.observaciones }}</td>
+						<td style="text-align: center;">{{ uc.fecha_ingreso }}</td>
+						<td style="text-align: center;">{{ uc.usuario }}</td>
+					</tr>
+					{% endfor %}
+					</tbody>
+				</table>
 			</div>
 		</div>
 	</div>
 	<!-- COL END -->
-	<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 col-xxl-3">
-		<div class="card overflow-hidden">
-			<div class="card-body pb-0 bg-recentorder">
-				<h3 class="card-title text-white">Recent Orders</h3>
-				<div class="chartjs-wrapper-demo">
-					<canvas id="recentorders" class="chart-dropshadow"></canvas>
-				</div>
-			</div>
-			<div id="flotback-chart" class="flot-background"></div>
-			<div class="card-body">
-				<div class="d-flex mb-4 mt-3">
-					<div
-							class="avatar avatar-md bg-secondary-transparent text-secondary bradius me-3">
-						<i class="fe fe-check"></i>
-					</div>
-					<div class="">
-						<h6 class="mb-1 fw-semibold">Delivered Orders</h6>
-						<p class="fw-normal fs-12"> <span class="text-success">3.5%</span>
-							increased </p>
-					</div>
-					<div class=" ms-auto my-auto">
-						<p class="fw-bold fs-20"> 1,768 </p>
-					</div>
-				</div>
-				<div class="d-flex">
-					<div class="avatar  avatar-md bg-pink-transparent text-pink bradius me-3">
-						<i class="fe fe-x"></i>
-					</div>
-					<div class="">
-						<h6 class="mb-1 fw-semibold">Cancelled Orders</h6>
-						<p class="fw-normal fs-12"> <span class="text-success">1.2%</span>
-							increased </p>
-					</div>
-					<div class=" ms-auto my-auto">
-						<p class="fw-bold fs-20 mb-0"> 3,675 </p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+{#	<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 col-xxl-3">#}
+{#		<div class="card overflow-hidden">#}
+{#			<div class="card-body pb-0 bg-recentorder">#}
+{#				<h3 class="card-title text-white">Recent Orders</h3>#}
+{#				<div class="chartjs-wrapper-demo">#}
+{#					<canvas id="recentorders" class="chart-dropshadow"></canvas>#}
+{#				</div>#}
+{#			</div>#}
+{#			<div id="flotback-chart" class="flot-background"></div>#}
+{#			<div class="card-body">#}
+{#				<div class="d-flex mb-4 mt-3">#}
+{#					<div#}
+{#							class="avatar avatar-md bg-secondary-transparent text-secondary bradius me-3">#}
+{#						<i class="fe fe-check"></i>#}
+{#					</div>#}
+{#					<div class="">#}
+{#						<h6 class="mb-1 fw-semibold">Delivered Orders</h6>#}
+{#						<p class="fw-normal fs-12"> <span class="text-success">3.5%</span>#}
+{#							increased </p>#}
+{#					</div>#}
+{#					<div class=" ms-auto my-auto">#}
+{#						<p class="fw-bold fs-20"> 1,768 </p>#}
+{#					</div>#}
+{#				</div>#}
+{#				<div class="d-flex">#}
+{#					<div class="avatar  avatar-md bg-pink-transparent text-pink bradius me-3">#}
+{#						<i class="fe fe-x"></i>#}
+{#					</div>#}
+{#					<div class="">#}
+{#						<h6 class="mb-1 fw-semibold">Cancelled Orders</h6>#}
+{#						<p class="fw-normal fs-12"> <span class="text-success">1.2%</span>#}
+{#							increased </p>#}
+{#					</div>#}
+{#					<div class=" ms-auto my-auto">#}
+{#						<p class="fw-bold fs-20 mb-0"> 3,675 </p>#}
+{#					</div>#}
+{#				</div>#}
+{#			</div>#}
+{#		</div>#}
+{#	</div>#}
 	<!-- COL END -->
 
 	<div class="col-xxl-4 col-md-12 col-xl-12">
