--- a/views/home.twig
+++ b/views/home.twig
@@ -100,9 +100,9 @@
 						<td style="text-transform: uppercase;">{{ uc.tipo }}</td>
 						<td style="text-align: center;">{{ uc.total_registros }}</td>
 						<td style="text-align: center;">{{ uc.total_errores }}</td>
-						<td style="text-align: center;">{{ uc.observaciones }}</td>
+						<td>{{ uc.observaciones }}</td>
 						<td style="text-align: center;">{{ uc.fecha_ingreso }}</td>
-						<td style="text-align: center;">{{ uc.usuario }}</td>
+						<td style="text-align: center; text-transform: uppercase;">{{ uc.usuario }}</td>
 					</tr>
 					{% endfor %}
 					</tbody>
