--- a/views/home.twig
+++ b/views/home.twig
@@ -99,7 +99,13 @@
 					<tr>
 						<td style="text-transform: uppercase;">{{ uc.tipo }}</td>
 						<td style="text-align: center;">{{ uc.total_registros }}</td>
-						<td style="text-align: center;">{{ uc.total_errores }}</td>
+						<td style="text-align: center;">
+							{% if uc.total_errores > 0 %}
+								{{ uc.total_errores }}
+							{% else %}
+								0
+							{% endif %}
+						</td>
 						<td>{{ uc.observaciones }}</td>
 						<td style="text-align: center;">{{ uc.fecha_ingreso }}</td>
 						<td style="text-align: center; text-transform: uppercase;">{{ uc.usuario }}</td>
