--- a/views/home.twig
+++ b/views/home.twig
@@ -24,7 +24,7 @@
 			<div class="col-lg-8 col-md-8 col-sm-12 col-xl-8 col-xxl-8">
 				<div class="card overflow-hidden">
 					<div class="card-header">
-						<h3 class="card-title" style="font-weight: bold;">GESTIONES</h3>
+						<h3 class="card-title" style="font-weight: bold;"><i class="fa fa-cogs"></i> SEGUIMIENTOS</h3>
 					</div>
 					<div class="card-body">
 						<table id="data-table" class="table table-bordered table-sm mb-0">
@@ -80,7 +80,7 @@
 	<div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 		<div class="card">
 			<div class="card-header">
-				<h3 class="card-title" style="font-weight: bold;">CARGA DE INFORMACIÓN</h3>
+				<h3 class="card-title" style="font-weight: bold;"><i class="fa fa-file-excel-o"></i> CARGA DE INFORMACIÓN</h3>
 			</div>
 			<div class="card-body">
 				<table id="data-table" class="table table-bordered table-sm mb-0">
