--- a/views/producto/indexDiners.twig
+++ b/views/producto/indexDiners.twig
@@ -21,7 +21,7 @@
 						</div>
 
 						<div class=" row mb-4">
-							<label for="inputName" class="col-md-2 form-label">Producto</label>
+							<label for="inputName" class="col-md-2 form-label">Código operación</label>
 							<div class="col-md-4">
 								<input type="text" class="form-control" name="producto" id="producto" value="{{ filtros.producto }}"/>
 							</div>
@@ -84,7 +84,7 @@
 	<div class="col-md-12 col-xl-12">
 		<div class="card">
 			<div class="card-header">
-				<h4 class="card-title">Lista de Productos</h4>
+				<h4 class="card-title">Lista de Operaciones</h4>
 			</div>
 			<div class="card-body">
 				<div id="lista"></div>
