--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -193,7 +193,7 @@
 
 						<label for="inputName" class="col-md-2 form-label">{{ paleta.titulo_nivel2 }}</label>
 						<div class="col-md-4 col-informacion">
-							<select class="form-control form-select select2" v-on:change="cargarNivel3"
+							<select class="form-control form-select select2" v-on:change="cargarNivel3(); verificarCampos(2);"
 							        v-model="seguimiento.nivel_2_id" placeholder="Seleccione una opción" id="nivel_2_id"
 							        required v-autoname>
 								<option v-for="item in cat.paleta_nivel_2" v-bind:value="item.nivel2_id" v-html="item.nivel2"></option>
@@ -214,7 +214,7 @@
 						<label for="inputName" class="col-md-2 form-label">{{ paleta.titulo_nivel4 }}</label>
 						<div class="col-md-4 col-informacion">
 							<select class="form-control form-select select2"
-							        v-model="seguimiento.nivel_4_id" placeholder="Seleccione una opción" id="nivel_4_id" v-on:change="verificarCampos(4)"
+							        v-model="seguimiento.nivel_4_id" placeholder="Seleccione una opción" id="nivel_4_id"
 							        required v-autoname>
 								<option v-for="item in cat.paleta_nivel_4" v-bind:value="item.nivel4_id" v-html="item.nivel4"></option>
 							</select>
@@ -226,6 +226,15 @@
 							<label for="inputName" class="col-md-2 form-label">FECHA COMPROMISO DE PAGO</label>
 							<div class="col-md-4 col-informacion">
 								<input type="text" class="form-control fecha" id="fecha_compromiso_pago" name="fecha_compromiso_pago">
+							</div>
+						</div>
+					</div>
+
+					<div id="div_valor_comprometido">
+						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">VALOR COMPROMETIDO</label>
+							<div class="col-md-4 col-informacion">
+								<input type="text" class="form-control number" v-model="seguimiento.valor_comprometido" id="valor_comprometido" name="valor_comprometido">
 							</div>
 						</div>
 					</div>
@@ -391,6 +400,14 @@
                             $("#div_fecha_compromiso_pago").hide();
                             $('#fecha_compromiso_pago').removeAttr('required');
                         }
+
+                        if(res.mostrar_valor_comprometido == 'si'){
+                            $("#div_valor_comprometido").show();
+                            $('#valor_comprometido').prop('required',true);
+                        }else{
+                            $("#div_valor_comprometido").hide();
+                            $('#valor_comprometido').removeAttr('required');
+                        }
                         console.log(res);
                     });
                 },
@@ -410,6 +427,7 @@
                 var self = this;
                 $("#div_fecha_compromiso_pago").hide();
                 $("#div_motivo_no_pago").hide();
+                $("#div_valor_comprometido").hide();
                 $('#form-edit-seguimiento').validate({
                     onfocusout: false,
                     onkeyup: false,
