--- a/views/producto/listaDiners.twig
+++ b/views/producto/listaDiners.twig
@@ -16,7 +16,7 @@
 		<tr>
 			<th style="width: 90px;"></th>
 			<th>Cliente</th>
-			<th>Producto</th>
+			<th>Código operación</th>
 			<th>Estado</th>
 			<th>Asignado</th>
 			<th>Último seguimiento</th>
