--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -276,7 +276,7 @@
 
 		<div class="card">
 			<div class="card-header">
-				<h4 class="card-title">PRODUCTO</h4>
+				<h4 class="card-title">OPERACIÓN</h4>
 			</div>
 			<div class="card-body">
 				<div class=" row mb-4">
