--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -269,7 +269,7 @@
 				</div>
 				<div class="card-body">
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">PRODUCTO</label>
+						<label for="inputName" class="col-md-2 form-label">CÓDIGO OPERACIÓN</label>
 						<div class="col-md-4 col-informacion">
 							<span class="form-control-plaintext" v-html="model.producto"></span>
 						</div>
