--- a/views/producto/verSeguimientosDiners.twig
+++ b/views/producto/verSeguimientosDiners.twig
@@ -100,7 +100,7 @@
 				</div>
 				<div class="card-body">
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">PRODUCTO</label>
+						<label for="inputName" class="col-md-2 form-label">CÓDIGO OPERACIÓN</label>
 						<div class="col-md-4 col-informacion">
 							<input type="text" readonly class="form-control-plaintext" v-model="model.producto">
 						</div>
