--- a/views/campana/editar.twig
+++ b/views/campana/editar.twig
@@ -19,7 +19,7 @@
 							<div class="input-group">
 								<input type="text" class="form-control required"
 								       placeholder="Seleccione una Institución"
-								       v-model="institucion_nombre" name="institucion_nombre" id="institucion_nombre"
+								       name="institucion_nombre" id="institucion_nombre"
 								       readonly>
 								<input type="hidden" class="form-control" v-model="model.institucion_id"
 								       name="institucion_id" id="institucion_id"/>
