--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1129,6 +1129,7 @@
 													<td>
 														<span v-html="aplicativo_diners_tarjeta_interdin.total_calculo_precancelacion_diferidos"></span><br/>
 														<span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span>
+														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span>
 													</td>
 												</tr>
 												<tr>
