--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1128,8 +1128,8 @@
 													<td><strong>TOTAL VALOR PRE CANCELACION DIFERIDOS</strong></td>
 													<td>
 														<span v-html="aplicativo_diners_tarjeta_interdin.total_calculo_precancelacion_diferidos"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span>
-														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span>
+														<span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span><br/>
+														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span><br/>
 													</td>
 												</tr>
 												<tr>
