--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1131,6 +1131,7 @@
 														<span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span><br/>
 														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span><br/>
 														<span v-html="aplicativo_diners_tarjeta_interdin.prueba2"></span><br/>
+														<span v-html="aplicativo_diners_tarjeta_interdin.calculo_gastos_cobranza"></span><br/>
 													</td>
 												</tr>
 												<tr>
