--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1128,7 +1128,7 @@
 													<td><strong>TOTAL VALOR PRE CANCELACION DIFERIDOS</strong></td>
 													<td>
 														<span v-html="aplicativo_diners_tarjeta_interdin.total_calculo_precancelacion_diferidos"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span><br/>
+														total_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span><br/>
 														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span><br/>
 														<span v-html="aplicativo_diners_tarjeta_interdin.prueba2"></span><br/>
 														<span v-html="aplicativo_diners_tarjeta_interdin.calculo_gastos_cobranza"></span><br/>
