--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -620,7 +620,11 @@
 												<tr>
 													<td><strong>TOTAL VALOR PRE CANCELACION DIFERIDOS</strong></td>
 													<td>
-														<span v-html="aplicativo_diners_tarjeta_diners.total_calculo_precancelacion_diferidos"></span>
+														total_calculo_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_diners.total_calculo_precancelacion_diferidos"></span><br/>
+														total_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span><br/>
+														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span><br/>
+														<span v-html="aplicativo_diners_tarjeta_interdin.prueba2"></span><br/>
+														calculo_gastos_cobranza: <span v-html="aplicativo_diners_tarjeta_interdin.calculo_gastos_cobranza"></span><br/>
 													</td>
 												</tr>
 												<tr>
