--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -620,11 +620,7 @@
 												<tr>
 													<td><strong>TOTAL VALOR PRE CANCELACION DIFERIDOS</strong></td>
 													<td>
-														total_calculo_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_diners.total_calculo_precancelacion_diferidos"></span><br/>
-														total_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_diners.total_precancelacion_diferidos"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_diners.prueba"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_diners.prueba2"></span><br/>
-														calculo_gastos_cobranza: <span v-html="aplicativo_diners_tarjeta_diners.calculo_gastos_cobranza"></span><br/>
+														<span v-html="aplicativo_diners_tarjeta_diners.total_calculo_precancelacion_diferidos"></span><br/>
 													</td>
 												</tr>
 												<tr>
@@ -1132,10 +1128,6 @@
 													<td><strong>TOTAL VALOR PRE CANCELACION DIFERIDOS</strong></td>
 													<td>
 														<span v-html="aplicativo_diners_tarjeta_interdin.total_calculo_precancelacion_diferidos"></span><br/>
-														total_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_interdin.total_precancelacion_diferidos"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_interdin.prueba"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_interdin.prueba2"></span><br/>
-														<span v-html="aplicativo_diners_tarjeta_interdin.calculo_gastos_cobranza"></span><br/>
 													</td>
 												</tr>
 												<tr>
