--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1623,7 +1623,9 @@
 												<tr>
 													<td><strong>TOTAL VALOR PRE CANCELACION DIFERIDOS</strong></td>
 													<td>
-														<span v-html="aplicativo_diners_tarjeta_discover.total_calculo_precancelacion_diferidos"></span>
+														total_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_discover.total_precancelacion_diferidos"></span><br/>
+														calculo_gastos_cobranza: <span v-html="aplicativo_diners_tarjeta_discover.calculo_gastos_cobranza"></span><br/>
+														total_calculo_precancelacion_diferidos: <span v-html="aplicativo_diners_tarjeta_discover.total_calculo_precancelacion_diferidos"></span><br/>
 													</td>
 												</tr>
 												<tr>
